--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
+    "cross-spawn": "^6.0.5",
     "figlet": "^1.2.3"
   }
 }
